<resources>
    <string name="app_name">EventManager</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="accessid">Input Password</string>
    <string name="forgotmsg">forgotmsg</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="clearbutton">C</string>
    <string name="deletebutton">B</string>
</resources>
