<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="3"
    android:rowCount="9"
    android:orientation="horizontal"
    tools:context=".PasswordActivity">
    <TextView
        android:textSize="20dp"
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center|fill"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_row="0"
        android:text="@string/accessid" />

    <TextView
        android:maxLength="4"
        android:textSize="20dp"
        android:id="@+id/numberpadtext"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center|fill"
        android:layout_row="1"
        android:ems="4"
        android:inputType="numberPassword" >
        <requestFocus/>
    </TextView>
    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center|fill"
        android:layout_marginBottom="20dp"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:text="@string/forgotmsg" />

    <Button
        android:id="@+id/button1"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:background="@drawable/buttonborder"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:background="@drawable/buttonborder"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_margin="5dp"
        android:background="@drawable/buttonborder"
        android:text="@string/button3" />
    <Button
        android:id="@+id/button4"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:layout_row="5"
        android:background="@drawable/buttonborder"
        android:text="@string/button4" />
    <Button
        android:id="@+id/button5"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:layout_row="5"
        android:background="@drawable/buttonborder"
        android:text="@string/button5" />
    <Button
        android:id="@+id/button6"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="2"
        android:layout_margin="5dp"
        android:layout_row="5"
        android:background="@drawable/buttonborder"
        android:text="@string/button6" />
    <Button
        android:id="@+id/button7"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:layout_row="6"
        android:background="@drawable/buttonborder"
        android:text="@string/button7" />
    <Button
        android:id="@+id/button8"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:layout_row="6"
        android:background="@drawable/buttonborder"
        android:text="@string/button8" />
    <Button
        android:id="@+id/button9"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="2"
        android:layout_margin="5dp"
        android:layout_row="6"
        android:background="@drawable/buttonborder"
        android:text="@string/button9" />
    <Button
        android:id="@+id/clearbutton"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:layout_row="7"
        android:background="@drawable/buttonborder"
        android:text="@string/clearbutton" />
    <Button
        android:id="@+id/button0"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:layout_row="7"
        android:background="@drawable/buttonborder"
        android:text="@string/button0" />
    <Button
        android:id="@+id/deletebutton"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_column="2"
        android:layout_margin="5dp"
        android:layout_row="7"
        android:background="@drawable/buttonborder"
        android:text="@string/deletebutton" />


</GridLayout>